--- a/Tools/tools.html
+++ b/Tools/tools.html
@@ -14,7 +14,11 @@
   <header class="head">
     <div class="head-in">
       <a class="logo" href="../index.html"><span class="green">Green</span> <span class="bite">Bite</span></a>
-      <div class="hamburger" id="hamburger"></div>
+      <div class="hamburger" id="hamburger" aria-label="Menu" aria-controls="main-nav" aria-expanded="false">
+  <span></span>
+  <span></span>
+  <span></span>
+</div>
       <nav class="nav" id="main-nav">
         <a href="../index.html">HOME</a> <a href="./tools.html">TOOLS</a> <a href="../recipe/recipes.html">RECIPES</a> <a href="../body/body.html">WORKOUT</a> <a href="../calc/calc.html">MINDFULNESS</a> <a href="../contact/contact.html">CONTACT</a>
       </nav>
