--- a/recipe/recipes.html
+++ b/recipe/recipes.html
@@ -14,7 +14,11 @@
   <header class="head">
     <div class="head-in">
       <a class="logo" href="../index.html"><span class="green">Green</span> <span class="bite">Bite</span></a>
-      <div class="hamburger" id="hamburger"></div>
+      <div class="hamburger" id="hamburger" aria-label="Menu" aria-controls="main-nav" aria-expanded="false">
+  <span></span>
+  <span></span>
+  <span></span>
+</div>
       <nav class="nav" id="main-nav">
         <a href="../index.html">HOME</a> <a href="../Tools/tools.html">TOOLS</a> <a href="./recipes.html">RECIPES</a> <a href="../body/body.html">WORKOUT</a> <a href="../calc/calc.html">MINDFULNESS</a> <a href="../contact/contact.html">CONTACT</a>
       </nav>
@@ -55,6 +59,7 @@
             <th>Amount</th>
           </tr>
         </thead>
+        <tbody></tbody>
       </table>
     </div>
   </div>
@@ -75,7 +80,7 @@
       </form>
     </div>
   </footer>
-  <script src="./recipes.js"></script> 
+  <script src="recipes.js"></script> 
   <script src="../java/sub.js"></script>
 </body>
 </html>
