--- a/Tools/tools.html
+++ b/Tools/tools.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="utf-8">
   <meta name="description" content="Use GreenBite's health dashboard to calculate your BMR, BMI, and daily calorie needs. Discover personalized insights to support a healthier lifestyle.">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>GreenBite - TOOLS</title>
@@ -14,11 +15,11 @@
   <header class="head">
     <div class="head-in">
       <a class="logo" href="../index.html"><span class="green">Green</span> <span class="bite">Bite</span></a>
-      <div class="hamburger" id="hamburger" aria-label="Menu" aria-controls="main-nav" aria-expanded="false">
-  <span></span>
-  <span></span>
-  <span></span>
-</div>
+      <div class="hamburger" id="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+      </div>
       <nav class="nav" id="main-nav">
         <a href="../index.html">HOME</a> <a href="./tools.html">TOOLS</a> <a href="../recipe/recipes.html">RECIPES</a> <a href="../body/body.html">WORKOUT</a> <a href="../calc/calc.html">MINDFULNESS</a> <a href="../contact/contact.html">CONTACT</a>
       </nav>
