--- a/calc/calc.html
+++ b/calc/calc.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="utf-8">
   <meta name="description" content="GreenBite Mindfulness page: practice calmness with guided breathing exercises, meditation timer, soothing music, and session tracking tools to relax and focus.">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>GreenBite - MINDFULNESS</title>
@@ -14,23 +15,23 @@
   <header class="head">
     <div class="head-in">
       <a class="logo" href="../index.html"><span class="green">Green</span> <span class="bite">Bite</span></a>
-      <div class="hamburger" id="hamburger" aria-label="Menu" aria-controls="main-nav" aria-expanded="false">
-  <span></span>
-  <span></span>
-  <span></span>
-</div>
+      <div class="hamburger" >
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
       <nav class="nav" id="main-nav">
         <a href="../index.html">HOME</a> <a href="../Tools/tools.html">TOOLS</a> <a href="../recipe/recipes.html">RECIPES</a> <a href="../body/body.html">WORKOUT</a> <a href="./calc.html">MINDFULNESS</a> <a href="../contact/contact.html">CONTACT</a>
       </nav>
     </div>
   </header>
-  <section class="bg">
-    <main class="container">
+  <main class="bg">
+    <section class="container">
       <div class="left">
         <h1 class="shead">CALM YOUR MIND</h1>
         <p>This page is designed to help you practice mindfulness and relaxation through interactive tools. You can follow a guided breathing exercise with a visual circle that expands and contracts to regulate your inhale and exhale, promoting calmness and focus. A built-in meditation timer allows you to structure your practice or use the Pomodoro technique for productivity. To enhance the experience, the integrated music player offers soothing tracks that create a calming atmosphere. Your progress is automatically tracked through session counters, helping you stay motivated and consistent on your mindfulness journey.</p>
         <div class="mbox">
-          <audio id="audio" src=""></audio>
+          <audio id="audio" src="./forest.mp3"></audio>
           <div id="cmusic">
             Now Playing: None
           </div><input type="range" id="progressBar" value="0" min="0" max="100" step="1">
@@ -82,8 +83,8 @@
           </section>
         </div>
       </div>
-    </main>
-  </section>
+    </section>
+  </main>
   <footer class="foot">
     <div class="footbox">
       <div class="fleft">
