--- a/contact/contact.html
+++ b/contact/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
+    <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>GreenBite - CONTACT</title>
   <meta name="description" content="Contact GreenBite for inquiries, feedback, and support. Find our main office, branch offices, and direct ways to reach us.">
@@ -15,13 +15,18 @@
   <header class="head">
     <div class="head-in">
       <a class="logo" href="../index.html"><span class="green">Green</span> <span class="bite">Bite</span></a>
-      <div class="hamburger" id="hamburger" aria-label="Menu" aria-controls="main-nav" aria-expanded="false">
-  <span></span>
-  <span></span>
-  <span></span>
-</div>
+      <div class="hamburger" id="hamburger" >
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
       <nav class="nav" id="main-nav">
-        <a href="../index.html">HOME</a> <a href="../Tools/tools.html">TOOLS</a> <a href="../recipe/recipes.html">RECIPES</a> <a href="../body/body.html">WORKOUT</a> <a href="../calc/calc.html">MINDFULNESS</a> <a href="./contact.html">CONTACT</a>
+        <a href="../index.html">HOME</a> 
+        <a href="../Tools/tools.html">TOOLS</a>
+         <a href="../recipe/recipes.html">RECIPES</a> 
+         <a href="../body/body.html">WORKOUT</a> 
+         <a href="../calc/calc.html">MINDFULNESS</a> 
+         <a href="./contact.html">CONTACT</a>
       </nav>
     </div>
   </header>
@@ -30,7 +35,7 @@
       <h1 class="mhead">Contact Us</h1>
       <div class="contact-grid">
         <form id="feedbackForm" class="contact-form" name="feedbackForm">
-          <input type="text" id="name" placeholder="Name" required=""> <input type="email" id="email" placeholder="Email" required=""> <input type="text" id="phone" placeholder="Phone"> <select id="interest" required="">
+          <input type="text" id="name" placeholder="Name" required=""> <input type="email" id="Email" placeholder="Email" required=""> <input type="text" id="phone" placeholder="Phone"> <select id="interest" required="">
             <option value="">
               Select an Interest
             </option>
@@ -72,7 +77,12 @@
         <p class="fine">© <span id="year"></span> GreenBite. All rights reserved.</p>
       </div>
       <nav class="fnav">
-        <a href="../index.html">HOME</a> <a href="../Tools/tools.html">TOOLS</a> <a href="../recipe/recipes.html">RECIPES</a> <a href="../body/body.html">WORKOUT</a> <a href="../calc/calc.html">MINDFULNESS</a> <a href="./contact.html">CONTACT</a>
+                <a href="../index.html">HOME</a> 
+        <a href="../Tools/tools.html">TOOLS</a>
+         <a href="../recipe/recipes.html">RECIPES</a> 
+         <a href="../body/body.html">WORKOUT</a> 
+         <a href="../calc/calc.html">MINDFULNESS</a> 
+         <a href="./contact.html">CONTACT</a>
       </nav>
       <form class="fsbox" id="newsletter-form" name="newsletter-form">
         <p class="newshead">Join our Newsletter</p><input type="email" id="email" placeholder="Enter your email…" required=""> <button class="fbtn" type="submit">Subscribe</button>
