--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="utf-8">
   <meta name="description" content="GreenBite guides you to a healthier lifestyle with easy recipes, calorie calculators, workouts, and mindfulness tools.">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>GreenBite - HOME</title>
@@ -16,11 +17,11 @@
   <header class="head">
     <div class="head-in">
       <a class="logo" href="index.html"><span class="green">Green</span> <span class="bite">Bite</span></a>
-      <div class="hamburger" id="hamburger" aria-label="Menu" aria-controls="main-nav" aria-expanded="false">
-  <span></span>
-  <span></span>
-  <span></span>
-</div>
+      <div class="hamburger" id="hamburger" >
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
       <nav class="nav" id="main-nav">
         <a href="./index.html">HOME</a> <a href="./Tools/tools.html">TOOLS</a> <a href="./recipe/recipes.html">RECIPES</a> <a href="./body/body.html">WORKOUT</a> <a href="./calc/calc.html">MINDFULNESS</a> <a href="./contact/contact.html">CONTACT</a>
       </nav>
@@ -70,8 +71,8 @@
         </div>
       </div>
     </div>
-    <section class="box lay">
-      <section class="content">
+    <div class="box lay">
+      <div class="content">
         <a class="ltitle" href="#">QUICK AND SIMPLE HEALTHY RECIPES</a>
         <div class="grid">
           <article class="card">
@@ -147,8 +148,8 @@
             </div></a>
           </article>
         </div>
-      </section>
-    </section>
+      </div>
+    </div>
   </main>
   <footer class="foot">
     <div class="footbox">
