--- a/body/body.html
+++ b/body/body.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
+    <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>GreenBite - WORKOUT</title>
   <meta name="description" content="Generate personalized workout plans by selecting body parts and available equipment. Includes built-in exercise timer and guidance.">
@@ -15,21 +15,23 @@
   <header class="head">
     <div class="head-in">
       <a class="logo" href="../index.html"><span class="green">Green</span> <span class="bite">Bite</span></a>
-      <div class="hamburger" id="hamburger" aria-label="Menu" aria-controls="main-nav" aria-expanded="false">
-  <span></span>
-  <span></span>
-  <span></span>
-</div>
+      <div class="hamburger" id="hamburger" >
+          <span></span>
+          <span></span>
+          <span></span>
+      </div>
       <nav class="nav" id="main-nav">
         <a href="../index.html">HOME</a> <a href="../Tools/tools.html">TOOLS</a> <a href="../recipe/recipes.html">RECIPES</a> <a href="./body.html">WORKOUT</a> <a href="../calc/calc.html">MINDFULNESS</a> <a href="../contact/contact.html">CONTACT</a>
       </nav>
     </div>
   </header>
-  <section class="bg">
+  <main class="bg">
     <h1 class="mhead">Workout Plan Generator</h1>
     <p class="intro">Welcome to your personalized Workout Generator! Select the body part you want to focus on and the equipment you have available, and we’ll create a quick workout just for you. Each exercise comes with a built-in timer so you can stay on track and make the most of your training session.</p>
-    <main class="container">
+    <section class="container">
+      <h2>Select body part and equipment</h2>
       <div class="controls">
+
         <label for="bodypart">Body Part:</label> <select id="bodypart">
           <option value="">
             -- Select --
@@ -53,7 +55,7 @@
         <p id="placeholder">Select Body Part and Equipment and Click Generate Plan</p>
       </div>
       <div class="stepbox">
-        <div class="stepimg"><img id="stepimg" src="" alt=""></div>
+        <div class="stepimg"><img id="stepimg" src="./img/place.jpg" alt=""></div>
         <div class="steps">
           <div class="plan" id="plan"></div>
           <div class="steps" id="steps"></div>
@@ -63,8 +65,8 @@
         <p id="exerciseName">No exercise yet</p>
         <p id="timeDisplay">00:00</p><button id="start">Start</button> <button id="pause">Pause</button> <button id="reset">Reset</button> <audio id="beep" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg"></audio>
       </div>
-    </main>
-  </section>
+    </section>
+  </main>
   <footer class="foot">
     <div class="footbox">
       <div class="fleft">
