--- a/calc/calc.html
+++ b/calc/calc.html
@@ -15,11 +15,11 @@
   <header class="head">
     <div class="head-in">
       <a class="logo" href="../index.html"><span class="green">Green</span> <span class="bite">Bite</span></a>
-      <div class="hamburger" >
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
+      <div class="hamburger" id="hamburger" >
+  <span></span>
+  <span></span>
+  <span></span>
+</div>
       <nav class="nav" id="main-nav">
         <a href="../index.html">HOME</a> <a href="../Tools/tools.html">TOOLS</a> <a href="../recipe/recipes.html">RECIPES</a> <a href="../body/body.html">WORKOUT</a> <a href="./calc.html">MINDFULNESS</a> <a href="../contact/contact.html">CONTACT</a>
       </nav>
